# library-management

./: .gitignore  Dockerfile  LICENSE  README.md  db.Dockerfile  db_init.sql  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.envs/: .env.dev.sample  .env.prod.sample  .env.sample
accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
accounts/api/: serializers.py  views.py
accounts/migrations/: 0001_initial.py  0002_librarian.py  0003_member.py
borrowing/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
borrowing/api/: serializers.py  views.py
borrowing/migrations/: 0001_initial.py  0002_alter_borrowedbook_borrower.py
borrowing/signals/: handlers.py
config/: celery.py  settings.py  urls.py
config/settings/: base.py  local.py  production.py
core/: admin.py  models.py  serializers.py
core/migrations/: 0002_librarian.py  0003_member.py  0004_add_membership_code_to_member.py  0005_add_staff_code_to_librarian.py  0006_delete_member_and_librarian.py
envs/: .env.prod.sample  .env.sample
fines/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
fines/api/: serializers.py  views.py
fines/migrations/: 0001_initial.py  0002_alter_fine_amount.py
reservation/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
reservation/api/: serializers.py  views.py
reservation/migrations/: 0001_initial.py  0002_rename_reserved_date_reservedbook_reserved_at.py  0003_alter_reservedbook_due_time.py
(+1 files in other folders)
